--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "dev": "nodemon"
   },
   "repository": {
     "type": "git",
@@ -16,5 +17,8 @@
   "bugs": {
     "url": "https://github.com/ianisout/hello-crud/issues"
   },
-  "homepage": "https://github.com/ianisout/hello-crud#readme"
+  "homepage": "https://github.com/ianisout/hello-crud#readme",
+  "devDependencies": {
+    "nodemon": "^2.0.7"
+  }
 }
